--- a/playbooks/dev.yml
+++ b/playbooks/dev.yml
@@ -36,3 +36,9 @@
           - python3
           - python3-venv
           - python3-pip
+    - name: Install docker and docker-compose
+      become: true
+      ansible.builtin.apt:
+        pkg:
+          - docker
+          - docker-compose
